# Luanti-MapBlock-Codec

./: .gitignore  README.md  pyproject.toml
example/: createMapSqlite.py  pattern_logo.txt
src/luanti_map_builder/: decode_postition.py  encode_position.py  mapBlockDecode.py  mapBlockEncode.py
