[project]
name = "luanti-map-builder"
version = "0.1.0"
description = "Minetest/Luanti map-block encoder/decoder."
authors = [{name = "Chen Xu"}]
readme = "README.md"
requires-python = "==3.10.13"
dependencies = ["zstandard==0.23.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"